src/styles.scss
/* You can add global styles to this file, and also import other style files */

@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700);

body {
  font-family: 'Open Sans Condensed', sans-serif;
  font-size: 14px;
}

/** DESIGN TWO COLUMNS **/

header {
  @apply text-center bg-gray-500 dark:bg-gray-900 dark:text-gray-300;
  background: url(/assets/fanart/000-the-prelude.jpg) top left #464646;
}

nav ul li {
  @apply uppercase align-middle mr-5 inline-block;
  letter-spacing: 1px;
  font-size: 1.3em;
}

nav a, nav a:visited {
  @apply text-gray-400 no-underline;
}

nav a:hover {
  @apply text-gray-300 underline;
}

nav a.current {
  @apply text-gray-300 text-2xl;
}

.teaser {
  @apply text-gray-400 tracking-wider italic;
}

/** COMBINED vIEWS **/

.cover {
  box-shadow: #eee 2px 1px 2px 1px;
}

/** GENERAL **/

h1 {
  @apply tracking-wide uppercase font-bold text-white m-0 inline-block text-3xl;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
}

h2 {
  @apply font-bold m-0 inline-block text-xl;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
}

legend {
  font-size: 1.6em;
  color: #3d73a9;
}

.lead {
  @apply text-justify text-gray-500 text-xl;
}

.quote {
  @apply text-justify text-gray-400 text-xl mx-10 my-12;
}

.quote span {
  @apply text-blue-700 font-bold uppercase;
  @apply dark:text-blue-300;
}

.info {
  font-size: 1.6em;
  text-align: justify;
  color: #666;
  line-height: 1.4em;
}

.label {
  font-size: 0.7em;
  margin: 0 2px;
  display: inline-block;
  padding: 0 4px;
  border-radius: 4px;
  vertical-align: 10%;
  line-height: normal;
  font-variant: small-caps;
  letter-spacing: 2px;
}

hr {
  margin-top: 75px;
  border: none;
}

b, strong {
  font-weight: 700;
}

*+p {
  margin-top: 15px;
}

/** LIST STYLE **/

ul.list {
  list-style: none;
  padding: 0;
}

ul.list li {
  border-left: 3px solid #fff;
  padding-left: 10px;
  padding-right: 10px;
  border-top: 1px solid #ddd;
  margin-bottom: 10px;

  @apply dark:border-gray-500;
}

ul.list li a {
  display: block;
  text-decoration: none;
}

.li-first {
  font-size: 1.5em;
  line-height: 2em;
  color: #666;
}

.li-second {
  font-size: 1.3em;
  margin-left: 5px;
  color: #999;
}

.button {
  float: right;
  font-size: 1.4em;
  line-height: 2em;
  text-decoration: none;
  text-transform: uppercase;
  display: inline-block;
  color: #ddd;

  border-bottom: 1px solid #ddd;
  border-left: 1px solid #ddd;
  border-right: 1px solid #ddd;
  border-top: 3px solid #fefefe;
  padding: 0 6px;
  font-weight: bold;
  background-color: #fefefe;
  box-shadow: #ddd 0 1px 1px 0;

  @apply dark:bg-red-400 dark:text-gray-300 dark:border-red-400;
}

.button:before {
  content: " ";
}

.right li:hover .button {
  color: #666;
}

/** LIST HOVER **/

ul.list li:hover {
  background-color: #f5f5f5;
  @apply dark:bg-gray-700;
}

ul.list li.nolink:hover {
  cursor: default;
}

ul.list li:hover .button {
  color: #444;
}

ul.list li:hover .button:before {
  content: url('/assets/cursor.png');
  position: relative;
  top: 2px;
  right: 2px;
  animation: cursorMove 1s linear infinite;
  -webkit-animation: cursorMove 1s linear infinite;
}

@keyframes cursorMove {
  50% {
    right: 6px;
  }
  100% {
    right: 2px;
  }
}

@-webkit-keyframes cursorMove {
  50% {
    right: 6px;
  }
  100% {
    right: 2px;
  }
}

.lang-en {
  background-color: #444;
  color: #fff;
  border-radius: 5px;
  font-variant: small-caps;
}

/**
 * FOOTER
 */

 footer {
  @apply bg-gray-400 dark:bg-gray-900 text-center text-gray-300 py-10;
  background: url(/assets/fanart/000-the-prelude.jpg) top right #999;
}

footer a {
  line-height: 1.8em;
  color: #ddd;
}

footer a:hover {
  color: #eee;
  text-decoration: none;
  border-bottom: 1px dotted #eee;
}

footer ul {
    list-style: none;
    padding: 0;
}

footer ul li {
  display: inline;
}

footer ul li.muted {
  margin: 0 5px;
  color: #fff;
}

